# jarvis-windows-standalone

./: .env.example  .gitignore  CHANGELOG.md  CHECK_GITHUB_UPDATE.bat  CHECK_GITHUB_UPDATE.ps1  CONTRIBUTING.md  CREATE_BACKUP.bat  CREATE_DIAGNOSTICS_ZIP.bat  DIAGNOSE.bat  EXPORT_JARVIS_DATA.bat  FIRST_SETUP.bat  FIRST_SETUP.ps1  INSTALLER_COMMON_REFERENCE.ps1  INSTALL_JARVIS.bat  INSTALL_JARVIS.ps1  JARVIS_INSTALL_CONFIG.json  LICENSE  PREPARE_PIPER.bat  PRODUCT_INSTALLER.bat  PROJECT_STATUS.md  README.md  README_START.txt  REINSTALL_CLEAN.bat  REPAIR.bat  REPAIR.ps1  REPAIR_JARVIS.bat  SECURITY.md  SELF_CHECK.bat  START_DEV_FRONTEND.bat  START_FRONTEND_CMD.bat  START_JARVIS.bat  START_JARVIS.ps1  UNINSTALL_JARVIS.bat  UPDATE_JARVIS.bat  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: __init__.py  agent_registry.py  audit_log.py  authority.py  awareness.py  config.py  email_agent.py  email_routes.py  knowledge.py  legacy_core.py  main.py  orchestrator.py  orchestrator_routes.py  persistent_memory.py  requirements.txt  skill_system.py  tool_registry.py  utils.py  work_agent.py
config/: lifeos.example.json  screen-perception.example.json
docs/: ARCHITECTURE_IMPROVEMENTS.md  CLEANUP_REVIEW.md  FRONTEND_F_ROADMAP.md  FRONTEND_LIVING_UI_VISION.md  FRONTEND_VISUAL_ROADMAP.md  JARVIS_GOD_LEVEL_ARCHITECTURE.md  PRIVATE_GITHUB_UPDATES.md  REPOSITORY_STRUCTURE_PLAN.md  ROLLOUT_GUIDE.md  SECURITY_AUDIT_PLAN.md  VOICE_MODULE_PLAN.md  automation-audit-log.md  autonomous-assistant-roadmap.md  backend-health-check.md  dashboard-theme-system-implementation.md  dashboard-theme-test-checklist.md  diagcenter.md  index.html  installer-readiness.md  lifeos-daily-command-center.md  lifeos-global-upgrade.md  lifeos-private-config.md  lifeos-roadmap.md  real-assist-roadmap.md  release-zip-workflow.md  tidy-root-migration-notes.md
frontend/: ACCESSIBILITY.md  CHANGELOG.md  MIGRATION-STRATEGY.md  PERFORMANCE.md  README.md  README.stack-migration.md  STACK-MIGRATION-CLEAN.md  STACK-MIGRATION-PR-CHECKLIST.md  STACK-MIGRATION-TESTPLAN.md  START_FRONTEND_DIAGNOSE.bat  START_FRONTEND_STATISCHE_DIAGNOSE.bat  components.json  diagnose.html  index.html  migration-checklist.json  package-lock.json  package.json  performance-budget.json  start_frontend.bat  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
jarvis/: __init__.py  __main__.py  _ui.py
outlook_scripts/: capture_context.ps1  delete_mails.ps1  scan_inbox.ps1
piper/: README_PIPER.txt
(+379 files in other folders)
